Se agregaron cambios al index y sección de funiones

--- a/index.html
+++ b/index.html
@@ -54,35 +54,46 @@
     </header>
 
     <div>
-        <img class="imagen-portada" src="/imagenes/teatro.jpg" alt="Portada Teatro Colon">
+        <img class="imagen-portada" src="./imagenes/portada-index2.jpg" alt="Portada Teatro Colon">
     </div>
 
-    <section>
+    <section class="seccion-novedades">
 
-        <div class="grid-novedades"> 
-            <div class="imagenes-novedades">
-                <img class="imagen-novedades1" src="imagenes/teatro.jpg" alt="Imagen Novedades 1">
+        <div class="d-flex flex-row mb-3 d-flex justify-content-around">
+            
+            <div class="d-flex align-items-start">
+                <div class="imagenes-novedades">
+                    <img class="imagen-novedades1" src="imagenes/teatro.jpg" alt="Imagen Novedades 1">
+                </div>
+
+                <div class="texto">
+                    <p>10/01/2024 - 20hs</p>
+                    <h2>PIXAR EN CONCIERTO</h2>
+                    <h3>¡Nuevas funciones!</h3>
+                </div>
             </div>
-            <div class="Novedades-1">
-                <div class="fecha">10/01/2024 - 20hs</div>
-                <div class="titulo">PIXAR EN CONCIERTO</div>
-                <div class="detalle">¡Nuevas funciones!</div>
+
+            <div class="d-flex align-items-start">
+                <div class="imagenes-novedades">
+                    <img class="imagen-novedades1" src="imagenes/teatro.jpg" alt="Imagen Novedades 1">
+                </div>
+        
+                <div class="texto">
+                    <p>10/01/2024 - 20hs</p>
+                    <h2>PIXAR EN CONCIERTO</h2>
+                    <h3>¡Nuevas funciones!</h3>
+                </div>
             </div>
-            <div>
-                <img class="imagen-novedades2" src="imagenes/teatro.jpg" alt="Imagen Novedades 2">
-            </div>
-            <div class="Novedades-2">
-                <div class="fecha">10/01/2024 - 20hs</div>
-                <div class="titulo">PIXAR EN CONCIERTO</div>
-                <div class="detalle">¡Nuevas funciones!</div>
-            </div>
-            <div>
-                <img class="imagen-novedades3" src="imagenes/teatro.jpg" alt="Imagen Novedades 3">
-            </div>
-            <div class="Novedades-3">
-                <div class="fecha">10/01/2024 - 20hs</div>
-                <div class="titulo">PIXAR EN CONCIERTO</div>
-                <div class="detalle">¡Nuevas funciones!</div>
+
+            <div class="d-flex align-items-start">
+                <div class="imagenes-novedades">
+                    <img class="imagen-novedades1" src="imagenes/teatro.jpg" alt="Imagen Novedades 1">
+                </div>
+                <div class="texto">
+                    <p>10/01/2024 - 20hs</p>
+                    <h2>PIXAR EN CONCIERTO</h2>
+                    <h3>¡Nuevas funciones!</h3>
+                </div>
             </div>
         </div>
 
