Fotos de portadas y galerias

--- a/funciones.html
+++ b/funciones.html
@@ -39,9 +39,6 @@
                 <li>
                     <a class="noticias" href="./noticias.html">Noticias</a>
                 </li>
-                <li>
-                    <a class="e-ticket" href="./e-ticket.html">E-ticket</a>
-                </li>
                 <li class="redes ig">
                         <a href="https://www.instagram.com/teatrocolon/?hl=es"></a>
                     </li>
@@ -57,38 +54,76 @@
         <img class="imagen-portada" src="./imagenes/portada-funciones.jpg" alt="Portada Teatro Colon">
     </div>
 
-    <div class="d-flex justify-content-between">
 
-        <ul class="nav nav-underline">
-            <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">ACTUALES</a>
+
+
+
+
+
+
+
+
+
+
+
+
+        <ul class="nav nav-tabs" id="myTab" role="tablist">
+            <li class="nav-item" role="presentation">
+                <button class="nav-link active" id="todos-tab" data-bs-toggle="tab" data-bs-target="#todos-tab-pane" type="button" role="tab" aria-controls="todos-tab-pane" aria-selected="true">Todos</button>
             </li>
-
-            <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true">FUTURAS</a>
+            <li class="nav-item" role="presentation">
+                <button class="nav-link" id="opera-tab" data-bs-toggle="tab" data-bs-target="#opera-tab-pane" type="button" role="tab" aria-controls="opera-tab-pane" aria-selected="false">Opera</button>
+            </li>
+            <li class="nav-item" role="presentation">
+                <button class="nav-link" id="ballet-tab" data-bs-toggle="tab" data-bs-target="#ballet-tab-pane" type="button" role="tab" aria-controls="ballet-tab-pane" aria-selected="false">Ballet</button>
+            </li>
+            <li class="nav-item" role="presentation">
+                <button class="nav-link" id="conciertos-tab" data-bs-toggle="tab" data-bs-target="#conciertos-tab-pane" type="button" role="tab" aria-controls="conciertos-tab-pane" aria-selected="false">Conciertos</button>
             </li>
         </ul>
 
-        <select class="Dropdown-Filtro-Menu">
-            <a class="dropdown-filtro" href="#" id="DropdownFiltroMenu"</a>
-                <option class="dropdown-selected" value="Todos">Todos</option>
-                <option value="Opera">Opera</option>
-                <option value="Ballet">Ballet</option>
-                <option value="Conciertos">Conciertos</option>           
-        </select>
 
-    </div>
+      <!-- INICIO DE CONTENIDO -->
+      <div class="tab-content" id="myTabContent">
+        
+        <div class="tab-pane fade show active" id="todos-tab-pane" role="tabpanel" aria-labelledby="todos-tab" tabindex="0">
+            <div class="grid-funciones">
+                <img class="grid-imagen1" src="imagenes/grid-funciones/grid-imagen1.jpg" alt="Imagen1">
+                <img class="grid-imagen2" src="imagenes/grid-funciones/grid-imagen2.jpg" alt="Imagen2">
+                <img class="grid-imagen3" src="imagenes/grid-funciones/grid-imagen3.jpg" alt="Imagen3">
+                <img class="grid-imagen4" src="imagenes/grid-funciones/grid-imagen4.jpg" alt="Imagen4">
+                <img class="grid-imagen5" src="imagenes/grid-funciones/grid-imagen5.jpg" alt="Imagen5">
+                <img class="grid-imagen6" src="imagenes/grid-funciones/grid-imagen6.jpg" alt="Imagen6">
+            </div>
+        </div>
+
+        <div class="tab-pane fade" id="opera-tab-pane" role="tabpanel" aria-labelledby="opera-tab" tabindex="0">
+            <div class="grid-funciones">
+            <img class="grid-imagen1" src="imagenes/grid-funciones/grid-imagen1.jpg" alt="Imagen1">
+                <img class="grid-imagen2" src="imagenes/grid-funciones/grid-imagen2.jpg" alt="Imagen2">
+            </div>
+        </div>
+
+        <div class="tab-pane fade" id="ballet-tab-pane" role="tabpanel" aria-labelledby="ballet-tab" tabindex="0">
+            <div class="grid-funciones">
+            <img class="grid-imagen3" src="imagenes/grid-funciones/grid-imagen3.jpg" alt="Imagen3">
+                <img class="grid-imagen4" src="imagenes/grid-funciones/grid-imagen4.jpg" alt="Imagen4">
+            </div>
+        </div>
+
+        <div class="tab-pane fade" id="conciertos-tab-pane" role="tabpanel" aria-labelledby="conciertos-tab" tabindex="0">
+            <div class="grid-funciones">
+            <img class="grid-imagen5" src="imagenes/grid-funciones/grid-imagen5.jpg" alt="Imagen5">
+                <img class="grid-imagen6" src="imagenes/grid-funciones/grid-imagen6.jpg" alt="Imagen6">
+            </div>
+        </div>
+
+      </div>
+      <!-- CIERRE DE CONTENIDO -->
 
 
 
-    <div class="grid-funciones">
-        <img class="grid-imagen1" src="imagenes/grid-funciones/grid-imagen1.jpg" alt="Imagen1">
-        <img class="grid-imagen2" src="imagenes/grid-funciones/grid-imagen2.jpg" alt="Imagen2">
-        <img class="grid-imagen3" src="imagenes/grid-funciones/grid-imagen3.jpg" alt="Imagen3">
-        <img class="grid-imagen4" src="imagenes/grid-funciones/grid-imagen4.jpg" alt="Imagen4">
-        <img class="grid-imagen5" src="imagenes/grid-funciones/grid-imagen5.jpg" alt="Imagen5">
-        <img class="grid-imagen6" src="imagenes/grid-funciones/grid-imagen6.jpg" alt="Imagen6">
-    </div>
+
 
     <footer class="footer">
         <img class="logo-footer" src="imagenes/teatro-colon-large.jpg" alt="Teatro Colón Logo">
@@ -113,5 +148,10 @@
         </div>
     </footer>
     
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
 </body>
 </html>
