--- a/visitas.html
+++ b/visitas.html
@@ -30,6 +30,8 @@
             <a href="./index.html"><img class="logo-navbar" src="imagenes/logo-colon-black.png" alt="Logo Teatro Colón"></a>
        
            <ul class="NavBar">
+
+
                 <li>
                     <a class="funciones" href="./funciones.html">Funciones</a>
                 </li>
@@ -38,9 +40,6 @@
                 </li>
                 <li>
                     <a class="noticias" href="./noticias.html">Noticias</a>
-                </li>
-                <li>
-                    <a class="e-ticket" href="./e-ticket.html">E-ticket</a>
                 </li>
                 <li class="redes ig">
                         <a href="https://www.instagram.com/teatrocolon/?hl=es"></a>
@@ -73,13 +72,13 @@
 
 
 
-    <h1 class="text-center">TITULO</h1>
+    <h1 class="text-center">Otras opciones de visita</h1>
 
 
     <div class="acordeon-bloque">
 
     <div class="acordeon_interno">
-        <button class="acordeon">Grupo de más de 20 personas        </button>
+        <button class="acordeon">Grupo de más de 20 personas</button>
         <div class="panel">
             <p><strong>Para garantizar un acceso ordenado y ágil, </strong>es necesario que los grupos de más de 20 personas reserven anticipadamente sus entradas, como mínimo, con una semana de antelación.
             </p>
