Ultimas modificaciones y se agregaron los wireframes de mobile para entregar

--- a/visitas.html
+++ b/visitas.html
@@ -59,8 +59,8 @@
     <section class="seccion-teatro">
         <div class="teatro-historia">
             <div class="texto-teatro">
-                <h1>El Teatro</h1>
-                <p class="texto-visitas">El <strong>Teatro Colón </strong>es un teatro de ópera de la Ciudad Autónoma de Buenos Aires, la capital de Argentina. Por su tamaño, acústica1​ y trayectoria, ha llegado a ser considerado como uno de los mejores teatros líricos del mundo.​ Según una encuesta realizada por el experto en acústica Leo Beranek a destacados directores internacionales de ópera y de orquesta, el Teatro Colón posee la sala con la mejor acústica para ópera y la segunda mejor para conciertos del mundo.</p>
+                <h1>Los secretos mejor guardados</h1>
+                <p class="texto-visitas">El <strong>Teatro Colón </strong>guarda secretos en cada rincón y vivir la experiencia de una Visita Guiada es conocer una porción de su historia de más de cien años al servicio de la cultura argentina y mundial. Al recorrer la Sala, el Foyer Principal, la Galería de Bustos y el Salón Dorado, los visitantes pueden absorber detalles asombrosos sobre la arquitectura, las escaleras, sus esculturas o vitreaux.</p>
             </div>
         <a class="BotonReservar">Reservar</a>
         </div>
