--- a/index.html
+++ b/index.html
@@ -73,30 +73,30 @@
 
             <div class="d-flex align-items-start">
                 <div class="imagenes-novedades">
-                    <img class="imagen-novedades1" src="imagenes/teatro.jpg" alt="Imagen Novedades 1">
+                    <img class="imagen-novedades1" src="./imagenes/SUNANDSEA.png" alt="Imagen Novedades 1">
                 </div>
         
                 <div class="texto">
-                    <p>10/01/2024 - 20hs</p>
-                    <h2>PIXAR EN CONCIERTO</h2>
-                    <h3>¡Nuevas funciones!</h3>
+                    <p>10/03/2024 - 21hs</p>
+                    <h2>SUN AND SEA</h2>
+                    <h3> OPERA</h3>
                 </div>
             </div>
 
             <div class="d-flex align-items-start">
                 <div class="imagenes-novedades">
-                    <img class="imagen-novedades1" src="imagenes/teatro.jpg" alt="Imagen Novedades 1">
+                    <img class="imagen-novedades1" src="./imagenes/fausto.png" alt="Imagen Novedades 1">
                 </div>
                 <div class="texto">
                     <p>10/01/2024 - 20hs</p>
-                    <h2>PIXAR EN CONCIERTO</h2>
-                    <h3>¡Nuevas funciones!</h3>
+                    <h2>FAUSTO</h2>
+                    <h3>OPERA</h3>
                 </div>
             </div>
         </div>
 
         <div class="contedor_bt">   
-            <a class="BotonVerMas">Ver más</a>
+            <a class="BotonVerMas" href="funciones.html">Ver más</a>
         </div>
 
     </section>
