se linkearon las carpetas a los archivos correctamente

--- a/pages/funciones.html
+++ b/pages/funciones.html
@@ -31,13 +31,13 @@
        
            <ul class="NavBar">
                 <li>
-                    <a class="funciones" href="./funciones.html">Funciones</a>
+                    <a class="funciones" href="../pages/funciones.html">Funciones</a>
                 </li>
                 <li>
-                    <a class="visitas" href="./visitas.html">Visitas</a>
+                    <a class="visitas" href="../pages/visitas.html">Visitas</a>
                 </li>
                 <li>
-                    <a class="noticias" href="./noticias.html">Noticias</a>
+                    <a class="noticias" href="../pages/noticias.html">Noticias</a>
                 </li>
                 <li class="redes ig">
                         <a href="https://www.instagram.com/teatrocolon/?hl=es"></a>
