--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
        
            <ul class="NavBar">
                 <li>
-                    <a class="funciones" href="./funciones.html">Funciones</a>
+                    <a class="funciones" href="../pages/funciones.html">Funciones</a>
                 </li>
                 <li>
-                    <a class="visitas" href="./visitas.html">Visitas</a>
+                    <a class="visitas" href="../pages/visitas.html">Visitas</a>
                 </li>
                 <li>
-                    <a class="noticias" href="./noticias.html">Noticias</a>
+                    <a class="noticias" href="../pages/noticias.html">Noticias</a>
                 </li>
             
                 <li class="redes ig">
@@ -96,7 +96,7 @@
         </div>
 
         <div class="contedor_bt">   
-            <a class="BotonVerMas" href="funciones.html">Ver más</a>
+            <a class="BotonVerMas" href="../pages/funciones.html">Ver más</a>
         </div>
 
     </section>
