Se realizaron cambios

--- a/pages/funciones.html
+++ b/pages/funciones.html
@@ -16,7 +16,7 @@
 
     <link rel="stylesheet" href="https://www.bootstrapcdn.com/fontawesome/">
     
-    <title>Funciones</title>
+    <title>Toda la programación del Teatro Colón.</title>
 </head>
 
 
