--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -16,7 +16,7 @@
 
     <link rel="stylesheet" href="https://www.bootstrapcdn.com/fontawesome/">
     
-    <title>Noticias</title>
+    <title>Encontrá las últimas noticias de Teatro Colón</title>
 </head>
 
 
