--- a/pages/visitas.html
+++ b/pages/visitas.html
@@ -16,7 +16,7 @@
 
     <link rel="stylesheet" href="https://www.bootstrapcdn.com/fontawesome/">
     
-    <title>Visitas</title>
+    <title>El Teatro Colón ofrece visitas guiadas diariamente para que vecinos y turistas puedan descubrir nuestro Primer Coliseo.</title>
 </head>
 
 
