--- a/index.html
+++ b/index.html
@@ -5,18 +5,22 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
+    <meta name="keywords" content="teatro, colon, ballet, concierto, opera, sinfonica">
+
+    <meta name="description" content="Su rico y prestigioso historial y las excepcionales condiciones acústicas y arquitectónicas de su edificio lo colocan al nivel de teatros como la Scala de Milán, la Ópera de París, la Ópera de Viena, el Covent Garden de Londres y el Metropolitan de Nueva York.">
+
     <!-- BOOTSTRAP /////////////////////////// -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- BOOTSTRAP /////////////////////////// -->
 
     <!-- ESTILOS PROPIOS /////////////////////////// -->
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
     <!-- ESTILOS PROPIOS /////////////////////////// -->
 
-
+    
     <link rel="stylesheet" href="https://www.bootstrapcdn.com/fontawesome/">
     
-    <title>Teatro Colón</title>
+    <title>El Teatro Colón de Buenos Aires es una de las salas de ópera más importantes del mundo.</title>
 </head>
 
 
@@ -104,7 +108,7 @@
 
     <section class="seccion-teatro">
         <div class="teatro-historia">
-            <h1>El Teatro</h1>
+            <h1 data-text="El Teatro">El Teatro</h1>
             <p>El Teatro Colón es un teatro de ópera de la Ciudad Autónoma de Buenos Aires, la capital de Argentina. Por su tamaño, acústica1​ y trayectoria, ha llegado a ser considerado como uno de los mejores teatros líricos del mundo.​ Según una encuesta realizada por el experto en acústica Leo Beranek a destacados directores internacionales de ópera y de orquesta, el Teatro Colón posee la sala con la mejor acústica para ópera y la segunda mejor para conciertos del mundo.
 
             Este teatro se realizó con el objetivo de contribuir a la integración de la cultura de inmigrantes, a la vez de cumplir la función de ser una suerte de centro cívico - social. La Ópera estaba de moda y la idea era levantar allí el mejor teatro del país, ya que el viejo Coliseo y el Victoria eran salas que no estaban a la altura de las nuevas pretensiones. El Teatro Colón fue, desde su creación, el lugar de reunión preferido por la oligarquía porteña.
@@ -112,7 +116,7 @@
         </div>
 
         <div class="imagen-teatro">
-            <img class="imagen-teatro-jpg" src="imagenes/teatro.jpg" alt="El interior del Colón">
+            <img class="imagen-teatro-jpg scale-up-center" src="imagenes/teatro.jpg" alt="El interior del Colón">
         </div>
 
     </section>
